--- a/src/styles/ElMylar.scss
+++ b/src/styles/ElMylar.scss
@@ -1,10 +1,8 @@
-/*! El Mylar : Neo (@Neos21) http://neos21.hateblo.jp/ */
+  /*! El Mylar : Neo (@Neos21) https://neos21.hateblo.jp/ */
 /*! Responsive: yes */
 
 // Neo's Normalize
 @import '../../node_modules/@neos21/neos-normalize/neos-normalize.scss';
-
-/*! El Mylar [Styles] : Neo (@Neos21) http://neos21.hateblo.jp/ */
 
 
 /* ==================================================
@@ -325,10 +323,10 @@ a {
  * 非表示にする要素
  * ================================================== */
 
-.hatena-asin-detail a[href^="http://d.hatena.ne.jp/asin/"],  // 「この商品を含むブログ」リンク
-.hatena-citation                                          ,  // 「embed:cite」で貼り付けたサイトのドメイン
-/* .hatena-module-profile */ .id                          ,  // プロフィール欄・デフォルトの ID
-#n-stw                                                    {  // フッタ・share-template-wrapper : JavaScript で Clone して記事下にシェアリンクを配置するための雛形
+.hatena-asin-detail a[href*="d.hatena.ne.jp/asin/"],  // 「この商品を含むブログ」リンク
+.hatena-citation                                   ,  // 「embed:cite」で貼り付けたサイトのドメイン
+/* .hatena-module-profile */ .id                   ,  // プロフィール欄・デフォルトの ID
+#n-stw                                             {  // フッタ・share-template-wrapper : JavaScript で Clone して記事下にシェアリンクを配置するための雛形
   display: none;
 }
 
@@ -350,7 +348,7 @@ $header-height-max: 200px;
 
 /* #blog-title */ #blog-title-inner {
   height: $header-height-min !important;  // $breakpoint-md 未満時の高さ・背景位置にする
-  background: url("http://cdn-ak.f.st-hatena.com/images/fotolife/n/neos21/20160522/20160522120246.jpg") no-repeat center center / cover !important;
+  background: url("https://cdn-ak.f.st-hatena.com/images/fotolife/n/neos21/20160522/20160522120246.jpg") no-repeat center center / cover !important;
   transition: height .2s;
   
   // $breakpoint-md 以上の高さ設定
@@ -1116,7 +1114,7 @@ $header-height-max: 200px;
   width: calc(20px + 1rem);  // アイコン 20px + 左右余白
   height: 100%;
   text-indent: -9999px;
-  background: url("http://blog.hatena.ne.jp/images/theme/search.png") no-repeat center center;
+  background: url("https://blog.hatena.ne.jp/images/theme/search.png") no-repeat center center;
   outline: 0;
   opacity: .5;
   cursor: pointer;
