--- a/src/styles/Corredor.scss
+++ b/src/styles/Corredor.scss
@@ -707,7 +707,7 @@ $header-height-max: calc(175px + #{$header-margin-top});
   &:not(.hatena-rakuten-detail)::before {
     content: "\f034";
     color: transparent;
-    background: radial-gradient(ellipse farthest-corner at 50% 20px, rgba(0, 0, 0, .5) 50%, rgba(255, 153, 0, .5) 50%) 50% 50% / 60px 50px no-repeat;
+    background: radial-gradient(ellipse farthest-corner at 50% 0, rgba(0, 0, 0, .5) 50%, rgba(255, 153, 0, .5) 50%) 50% 50% / 60px 60px no-repeat;
             background-clip: text;
     -webkit-background-clip: text;
   }
