--- a/src/styles/Corredor.scss
+++ b/src/styles/Corredor.scss
@@ -114,17 +114,6 @@ a {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   
-  // IE11 だけ Grid を修正する
-  @media all and (-ms-high-contrast: none) {
-    display: -ms-grid;
-    -ms-grid-columns: 1fr 1fr 1fr 1fr;
-    
-    .n-s-ha /* = li */ { -ms-grid-column: 1; }
-    .n-s-tw /* = li */ { -ms-grid-column: 2; }
-    .n-s-fb /* = li */ { -ms-grid-column: 3; }
-    .n-s-po /* = li */ { -ms-grid-column: 4; }
-  }
-  
   li {
     @include reset-list();
     
@@ -193,12 +182,6 @@ a {
     display: grid;
     grid-template-columns: minmax(440px, auto) minmax(250px, 350px);  // #wrapper (#main) … 440px ～ ・ #box2 … 250px ～ 350px
     grid-column-gap: 1.5rem;
-    
-    // IE11 だけ Grid を修正する
-    @media all and (-ms-high-contrast: none) {
-      display: -ms-grid;
-      -ms-grid-columns: calc(100% - 250px) 250px;  // minmax() が効かないようなので最小幅のままにする
-    }
   }
 }
 
@@ -206,12 +189,6 @@ a {
   // #content-inner の grid-template-columns と同値を入れておき突っ張り棒にする
   @media (min-width: $breakpoint-md) {
     min-width: 440px;
-    
-    // IE11 だけ Grid を修正する
-    @media all and (-ms-high-contrast: none) {
-      -ms-grid-column: 1;
-      margin-right: 1.5rem;  // grid-column-gap の代用
-    }
   }
 }
 
@@ -222,11 +199,6 @@ a {
   @media (min-width: $breakpoint-md) {
     margin-top: 0;
     min-width: 250px;
-    
-    // IE11 だけ Grid を修正する
-    @media all and (-ms-high-contrast: none) {
-      -ms-grid-column: 2;
-    }
   }
 }
 
@@ -502,7 +474,7 @@ $header-height-max: calc(175px + #{$header-margin-top});
 }
 
 // 記事タイトル : .archive-entry-header と共用
-.entry-title { // h1
+.entry-title {  // h1
   margin-bottom: 1rem;
   font-size: 1.5em;
   line-height: 1.3;
@@ -703,16 +675,13 @@ $header-height-max: calc(175px + #{$header-margin-top});
     line-height: 1;
   }
   
-  // Amazon : 円形グラデーションで色を分けマスクすることで「a」部分を黒色・矢印を黄色にする
+  // Amazon
   &:not(.hatena-rakuten-detail)::before {
     content: "\f034";
-    color: transparent;
-    background: radial-gradient(ellipse farthest-corner at 50% 0, rgba(0, 0, 0, .5) 50%, rgba(255, 153, 0, .5) 50%) 50% 50% / 60px 60px no-repeat;
-            background-clip: text;
-    -webkit-background-clip: text;
+    color: rgba(255, 153, 0, .5);
   }
   
-  // 楽天 : アイコンに合わせて白い円を作り、透過されている「R」字部分を白色にする
+  // 楽天
   &.hatena-rakuten-detail::before {
     content: "\f722";
     border-radius: 50%;
@@ -720,12 +689,6 @@ $header-height-max: calc(175px + #{$header-margin-top});
     height: 47px;
     line-height: 42px;
     color: rgba(200, 0, 0, .5);
-    background: rgba(255, 255, 255, .5);
-  }
-  
-  // IE11 : background-clip が効かないため何も表示しない
-  _:-ms-lang(x)::-ms-backdrop, &::before {
-    display: none !important;
   }
   
   li {
@@ -738,10 +701,10 @@ $header-height-max: calc(175px + #{$header-margin-top});
 
 .table-of-contents {  // ul
   display: inline-block;
-  border: 1px solid $nn-grey-border;
+  border: 1px solid #0ad;
   border-radius: 4px;
   padding: 1rem 2.5rem;
-  background: $nn-grey-bg;
+  background: #eff;
   
   &::before {
     content: "目次";
@@ -826,7 +789,7 @@ $header-height-max: calc(175px + #{$header-margin-top});
   }
 }
 
-/* .comment-box .comment .entry-comment .comment-user-name */ .hatena-id-icon {  // img
+/* .comment-box .comment */ .entry-comment /* .comment-user-name */ .hatena-id-icon {  // img
   position: absolute;  // blog.css で .entry-comment に position: relative が指定されている
   top: 1rem;  // li.entry-comment の padding-top　分
   left: 0;
@@ -1002,15 +965,6 @@ $header-height-max: calc(175px + #{$header-margin-top});
   grid-template-columns: 1fr 1fr;
   font-size: .9rem;
   
-  // IE11
-  @media all and (-ms-high-contrast: none) {
-    display: -ms-grid;
-    -ms-grid-columns: 1fr 1fr;
-    
-    ul:first-child { -ms-grid-column: 1; }
-    ul:last-child  { -ms-grid-column: 2; }
-  }
-  
   li {
     margin-left: 1.5rem;
     list-style: disc;
@@ -1084,26 +1038,6 @@ $header-height-max: calc(175px + #{$header-margin-top});
     
     @media (min-width: $breakpoint-md) {
       display: block;
-    }
-  }
-  
-  // IE11 だけ Grid を修正する : アイコンのみ・4列1行表示に統一する
-  @media all and (-ms-high-contrast: none) {
-    display: -ms-grid;
-    -ms-grid-columns: 1fr 1fr 1fr 1fr;  // repeat が使えない
-    
-    li {
-      margin: 0 .1rem;  // grid-gap の代わり
-    }
-    
-    .n-f-ha { -ms-grid-column: 1; }
-    .n-f-fe { -ms-grid-column: 2; }
-    .n-f-fb { -ms-grid-column: 3; }
-    .n-f-ig { -ms-grid-column: 4; }
-    
-    // 幅が広がってもテキストを見せない
-    span {
-      display: none !important;
     }
   }
 }
